# mcp-uptime-kuma-open

./: .gitignore  README.md  license.md  main.py  pyproject.toml
.github/workflows/: build.yml  tests.yml
src/mcp_uptime_kuma_open/: __init__.py  server.py  services.py  tools.py  uk_client.py
tests/: test_tools.py
