[project]
name = "mcp-uptime-kuma-open"
version = "0.1.1"
description = "Uptime Kuma Open MCP - Developed by GryfAi "
readme = "README.md"
authors = [
    { name = "cfossto", email = "70951673+cfossto@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp>=2.14.1",
    "uptime-kuma-api>=1.2.1",
]

[project.scripts]
mcp-uptime-kuma-open = "mcp_uptime_kuma_open.server:main"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"
